# serenity-bb

./: .env.local  .gitignore  .npmrc  .stylelintrc.json  AVATAR_UPLOAD_FIX.md  BACKEND_INTEGRATION.md  CALL_FEATURE_FINAL.md  CALL_FLOW_DOCUMENTATION.md  CALL_FUNCTIONALITY_GUIDE.md  CALL_FUNCTIONALITY_SUMMARY.md  CALL_SETUP.md  CONFIGURATION_GUIDE.md  CONFIGURE_ZOHO.md  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DEVELOPMENT_SETUP.md  DEVICE_TROUBLESHOOTING.md  DIAGNOSE_AND_FIX.sql  DRUG_TEST_FIX_INSTRUCTIONS.md  DRUG_TEST_NOTIFICATION_INTEGRATION.md  Dockerfile  EMBEDDED_MEETING_FEATURE.md  ENHANCED_SYSTEM_SUMMARY.md  FINAL_FIX.sql  FIXES_COMPLETE.md  FIX_API_KEY_TYPO.md  FIX_INVALID_API_KEY_ERROR.md  FIX_POLICIES_NOW.sql  FIX_RLS_NOW.sql  GOOGLE_INTEGRATION_SETUP.md  IMPROVED_CALL_FLOW_DOCUMENTATION.md  NETWORK_ERROR_TROUBLESHOOTING.md  NOTIFICATION_SYSTEM_README.md  PATIENT_VERIFICATION_MIGRATION_GUIDE.md  PATIENT_VIDEO_CALL_API_DOCUMENTATION.md  PROGRESS_SETUP_INSTRUCTIONS.md  QUICK_FIX_API_KEY.md  README.md  RE_ENABLE_RLS_WITH_FIX.sql  SEO_AUDIT_AND_FIXES.md  (+40 more)
backend/: Dockerfile  auth.py  config.py  database.py  main.py  models.py  models_rewards.py  pyproject.toml  pyrightconfig.json  railway.toml  render.yaml  requirements.txt  schemas.py  schemas_rewards.py  supabase_client.py
backend/migrations/: 001_initial_schema.sql  002_add_call_history.sql  002_seed_data.sql  003_add_notifications_table.sql  003_notifications.sql
backend/routers/: appointments.py  auth.py  automation.py  groups.py  leads.py  messages.py  notifications.py  patients.py  rewards.py  staff.py  (+2 more)
(+534 files in other folders)
